# CapDAT

./: .gitignore  CMakeLists.txt  README.md
docs/: technical_spec_and_dev_guide.md
include/: accepted_structure_writer.hpp  atom.hpp  capsid.hpp  chain.hpp  export_capsid.hpp  fold_patch_analysis.hpp  fold_patch_contact.hpp  fold_patch_export.hpp  fold_patch_extraction.hpp  fold_patch_frame.hpp  fold_patch_metrics.hpp  fold_patch_reporter.hpp  fold_patch_surface_fit.hpp  geometry_analysis.hpp  geometry_symmetry.hpp  logger.hpp  pdb_parser.hpp  reorientation_workflow.hpp  residue.hpp  structural_summary.hpp  summary_reporter.hpp  timer.hpp
src/: accepted_structure_writer.cpp  atom.cpp  capsid.cpp  chain.cpp  export_capsid.cpp  fold_patch_analysis.cpp  fold_patch_contact.cpp  fold_patch_export.cpp  fold_patch_extraction.cpp  fold_patch_frame.cpp  fold_patch_metrics.cpp  fold_patch_reporter.cpp  fold_patch_surface_fit.cpp  geometry_analysis.cpp  geometry_symmetry.cpp  logger.cpp  main.cpp  pdb_parser.cpp  reorientation_workflow.cpp  residue.cpp  structural_summary.cpp  summary_reporter.cpp  timer.cpp
tests/: export_capsid_tests.cpp  fold_patch_stage2_tests.cpp  geometry_analysis_tests.cpp  geometry_symmetry_tests.cpp  reorientation_workflow_tests.cpp  structural_summary_tests.cpp
